2010-04-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/replicate.py:
	  Add http:// to target URL.  Allows doing
	  gtd replicate add level

2010-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/maemo/new.py:
	  New window now allows selecting contexts/projects and setting due
	  date.

2010-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Set default type of a Thing.

2010-02-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Don't default start to datetime.datetime.now; this avoids things
	  with no start set to be shown as started today.
	* python/mushin/command/main.py:
	  Always set start when adding a thing.

2010-02-01  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/model/couch.py:
	  Don't invoke datetime.datetime.now() in the class definition,
	  since that makes us create tasks with a start date of when the
	  program was started, not now.

2010-01-15  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/replicate.py:
	  Allow specifying the port.

2009-12-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/main.py:
	  Unbreak search for titles.

2009-12-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* couchdb/shows/thing.js:
	* couchdb/templates/thing.html:
	  Use mustache.  Use a dirty trick to do object property access
	  in templates.

2009-12-26  Thomas Vander Stichele  <thomas at apestaart dot org>

	* python/mushin/command/replicate.py:
	  Catch another possible exception.

2009-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* data (added):
	* data/mushin-maemo.desktop (added):
	  Add a desktop file.

2009-12-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* setup.py (added):
	  Add a setup.py to package.
